# giggle-ml

./: .gitignore  CLAUDE.md  flake.nix  job.sbatch  justfile  pyproject.toml  sync
docs/datasets/: roadmap_epigenomics.md
scripts/: roadmap_epigenomics_embeds.py
src/analysis/: adv_heatmap.py  rme_model_score.py  rme_rank_analysis.py
src/giggleml/: types.py
src/giggleml/data/: fasta.py  intervals.py
src/giggleml/data_wrangling/: gmt2regions.py  interval_dataset.py  rme_caches.py
src/giggleml/embed_gen/: batch_infer.py
src/giggleml/inference/: equinox_inference.py  torch_inference.py
src/giggleml/models/: hyena_dna.py
src/giggleml/train/: rme_caches.py  train_orchestrator.py
src/giggleml/utils/: file_utils.py  interval_arithmetic.py  parallel.py  symbol_table.py
src/scripts/: __init__.py  gene_clean.py  gene_clean_.py  hyena_dna_many.py
src/scripts/datasets/: L1000.md  genes2regions.py  gmt2beds.py  roadmap_epigenomics.md  updown_bed_merge.py
tests/: test_collection_utils.py  test_data_wrangling.py  test_equinox_inference.py  test_fasta.py  test_file_utils.py  test_hyena_dna.py  test_intervals.py  test_lru_cache.py  test_torch_inference.py
